--- a/scrum-ios/Podfile
+++ b/scrum-ios/Podfile
@@ -2,6 +2,10 @@ use_frameworks!
 def shared_pods
     pod 'SkyFloatingLabelTextField', '~> 2.0.0'
     pod 'MBCircularProgressBar'
+    pod 'UPCarouselFlowLayout'
+    pod 'BWWalkthrough'
+
+
 end
 
 target 'scrum-ios' do
